--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
 layout: home
 title: Hi, I'm Rajan
 subtitle: A Software Engineer, Crafting Cutting-Edge Web and Mobile Solutions with Expert JavaScript Engineering
+full-width: true
 ---
