--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
 title: Hi, I'm Rajan
-subtitle: A Software Engineer, Crafting Cutting-Edge Web and Mobile Solutions with Expert JavaScript Engineering
+subtitle: A Sr. Software Engineer, Crafting Cutting-Edge Web and Mobile Solutions with Expert JavaScript Engineering
 full-width: true
 ---
