feat: added mgpc landing page

--- a/marriage-game-point-calculator.html
+++ b/marriage-game-point-calculator.html
@@ -277,7 +277,7 @@
         </div>
 
         <div class="text">
-            <h1>Record Your Game with MGPC and, Simplify Your Life</h1>
+            <h1>Record Your Game with MGPC and, Save your time!</h1>
             <br>
             <p>Say farewell to pen-and-paper scorekeeping as this app effortlessly records, calculates, and updates
                 player scores in real-time.</p>
