--- a/marriage-game-point-calculator.html
+++ b/marriage-game-point-calculator.html
@@ -175,23 +175,43 @@
             width: 100%;
         }
 
-        /* Responsive Styles */
-        @media (max-width: 1200px) {
+        @media (max-width: 1360px) {
             .hero {
-                padding: 0 50px;
+                flex-direction: column;
+                padding: 50px 20px;
+                text-align: center;
             }
 
             .hero h1 {
-                font-size: 3rem;
+                font-size: 2.5rem;
             }
 
-            .hero p {
-                font-size: 1rem;
+            .hero .phones {
+                margin-top: 50px;
             }
 
-            .join-waitlist {
-                right: 50px;
+            .hero .phones img.phone-front {
+                position: relative;
+                width: 250px;
             }
+
+            .phones img.phone-behind {
+                width: 250px;
+                left: -150px;
+                top: 50px;
+            }
+
+            .download-buttons {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .brand-logo {
+                top: 10px;
+                position: relative;
+                left: 0px;
+            }
+
         }
 
         @media (max-width: 768px) {
@@ -210,12 +230,15 @@
             }
 
             .hero .phones img.phone-front {
+                position: relative;
                 width: 250px;
+                right: -20px;
             }
 
             .phones img.phone-behind {
+                position: absolute;
                 width: 250px;
-                left: -200px;
+                left: -120px;
                 top: 50px;
             }
 
@@ -227,7 +250,7 @@
             .brand-logo {
                 top: 10px;
                 position: relative;
-                left: 100px;
+                left: 0px;
             }
 
             .join-waitlist {
@@ -247,6 +270,36 @@
 
             .hero .phones img.phone-front {
                 width: 220px;
+                right: -20px;
+            }
+
+            .phones img.phone-behind {
+                width: 200px;
+                left: -150px;
+                top: 50px;
+            }
+
+            .brand-logo {
+                left: 0px;
+            }
+
+            .brand-logo img {
+                width: 150px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .hero h1 {
+                font-size: 2rem;
+            }
+
+            .hero p {
+                font-size: 0.9rem;
+            }
+
+            .hero .phones img.phone-front {
+                width: 220px;
+                right: -20px;
             }
 
             .phones img.phone-behind {
