--- a/mgpc.html
+++ b/mgpc.html
@@ -330,7 +330,7 @@
         </div>
 
         <div class="text">
-            <h1>Record Your Game with MGPC and, Save your time!</h1>
+            <h1>Record Your Game with MGPC and Play with ease!</h1>
             <br>
             <p>Say farewell to pen-and-paper scorekeeping as this app effortlessly records, calculates, and updates
                 player scores in real-time.</p>
