feat: updated mgpc landing page

--- a/mgpc.html
+++ b/mgpc.html
@@ -31,7 +31,8 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            background: linear-gradient(135deg, #b73030 0%, #efd1d1 250%);
+            background: linear-gradient(135deg, #AF1919 0%, #2C3E50 100%);
+            /* Light Sky Blue */
             color: white;
             flex-grow: 1;
             padding: 0 120px;
@@ -183,7 +184,7 @@
 
         /* Footer */
         footer {
-            background: linear-gradient(135deg, #b73030 0%, #efd1d1 350%);
+            background: linear-gradient(100deg, #AF1919 0%, #2C3E50 100%);
             color: white;
             text-align: center;
             padding: 20px;
