feat: updated mgpc landing page

--- a/mgpc.html
+++ b/mgpc.html
@@ -42,6 +42,7 @@
         /* Left Section (Text and Button) */
         .hero .text {
             max-width: 600px;
+            margin-top: 150px;
         }
 
         .hero h1 {
@@ -145,8 +146,8 @@
         /* Adjust the brand logo to prevent overlap */
         .brand-logo {
             position: absolute;
-            top: 70px;
-            left: 120px;
+            top: 20px;
+            left: 100px;
             color: #1E88E5;
             border-radius: 30px;
             text-decoration: none;
@@ -198,6 +199,10 @@
                 text-align: center;
             }
 
+            .hero .text {
+                margin-top: 50px;
+            }
+
             .hero h1 {
                 font-size: 2.5rem;
             }
@@ -235,6 +240,10 @@
                 flex-direction: column;
                 padding: 50px 20px;
                 text-align: center;
+            }
+
+            .hero .text {
+                margin-top: 50px;
             }
 
             .hero h1 {
@@ -280,6 +289,10 @@
                 font-size: 2rem;
             }
 
+            .hero .text {
+                margin-top: 50px;
+            }
+
             .hero p {
                 font-size: 0.9rem;
             }
@@ -307,6 +320,10 @@
         @media (max-width: 480px) {
             .hero h1 {
                 font-size: 2rem;
+            }
+
+            .hero .text {
+                margin-top: 50px;
             }
 
             .hero p {
