chore: updated qr code

--- a/mgpc.html
+++ b/mgpc.html
@@ -138,7 +138,7 @@
 
         .qr-code img {
             width: 180px;
-            border-radius: 20px;
+            border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
@@ -431,7 +431,7 @@
                 player scores in real-time.</p>
             <!-- QR Code -->
             <div class="qr-code">
-                <img src="assets/img/project/mgpc/url_qrcodecreator.com.png" alt="QR Code" class="phone-behind">
+                <img src="assets/img/project/mgpc/mgpc_qr_code.png" alt="QR Code" class="phone-behind">
             </div>
             <!-- Download Buttons -->
             <div class="download-buttons">
