--- a/cv/digital-cv.html
+++ b/cv/digital-cv.html
@@ -4,4 +4,8 @@ title: Digital CV
 permalink: /cv/digital-cv
 ---
 <h1>Digital CV</h1>
-<embed src="/assets/resources/cv/rajan-resume-digital.pdf" type="application/pdf" width="100%" height="1000px">
+<!-- <embed src="/assets/resources/cv/rajan-resume-digital.pdf" type="application/pdf" width="100%" height="1000px"> -->
+<iframe
+    src="https://drive.google.com/viewerng/viewer?embedded=true&url=https://mrajan.com.np/assets/resources/cv/rajan-resume-digital.pdf"
+    style="width:100%; height:100vh;" frameborder="0">
+</iframe>
