--- a/cv/modern-professional.html
+++ b/cv/modern-professional.html
@@ -3,5 +3,9 @@ layout: default
 title: Modern Professional CV
 permalink: /cv/modern-professional
 ---
-<h1>Modern Professional CV</h1>
-<embed src="/assets/resources/cv/rajan-resume-professional.pdf" type="application/pdf" width="100%" height="1000px">
+<!-- <h1>Modern Professional CV</h1> -->
+<!-- <embed src="/assets/resources/cv/rajan-resume-professional.pdf" type="application/pdf" width="100%" height="1000px"> -->
+<iframe
+    src="https://drive.google.com/viewerng/viewer?embedded=true&url=https://mrajan.com.np/assets/resources/cv/rajan-resume-professional.pdf"
+    style="width:100%; height:100vh;" frameborder="0">
+</iframe>
