--- a/cv/plain-text.html
+++ b/cv/plain-text.html
@@ -4,4 +4,8 @@ title: Plain Text CV
 permalink: /cv/plain-text
 ---
 <h1>Plain Text CV</h1>
-<embed src="/assets/resources/cv/rajan-resume-plain.pdf" type="application/pdf" width="100%" height="1000px">
+<!-- <embed src="/assets/resources/cv/rajan-resume-plain.pdf" type="application/pdf" width="100%" height="1000px"> -->
+<iframe
+    src="https://drive.google.com/viewerng/viewer?embedded=true&url=https://mrajan.com.np/assets/resources/cv/rajan-resume-plain.pdf"
+    style="width:100%; height:100vh;" frameborder="0">
+</iframe>
