--- a/techstackapps.html
+++ b/techstackapps.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="MGPC App Landing Page">
-    <title>MGPC - Record Your Game</title>
+    <title>Tech Stack Apps</title>
 
     <!-- Import Poppins Font from Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
