chore: added teststack apps html

--- a/techstackapps.html
+++ b/techstackapps.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="MGPC App Landing Page">
+    <meta name="description" content="Tech Stack Apps Landing Page">
     <title>Tech Stack Apps</title>
 
     <!-- Import Poppins Font from Google Fonts -->
