chore: added contact us in mgpc page

--- a/mgpc.html
+++ b/mgpc.html
@@ -442,6 +442,15 @@
                     <img src="assets/img/Download_on_the_App_Store_Badge.webp" alt="Download on Apple App Store">
                 </a>
             </div>
+            <!-- ⬇️ Add Contact Info here -->
+            <div style="margin-top: 60px; text-align: left; color: white;">
+                <h3 style="font-size: 1.4rem; margin-bottom: 10px;">Contact Us</h3>
+                <p style="font-size: 1rem;">Have feedback, questions, or suggestions?</p>
+                <p style="margin-top: 10px; font-size: 1rem;">
+                    📧 <a href="mailto:support@mgpc.app"
+                        style="color: #90CAF9; text-decoration: none;">techstackapps@gmail.com</a>
+                </p>
+            </div>
         </div>
 
         <div class="phones">
