chore: added mgpc privacy and terms

--- a/mgpc.html
+++ b/mgpc.html
@@ -447,7 +447,7 @@
                 <h3 style="font-size: 1.4rem; margin-bottom: 10px;">Contact Us</h3>
                 <p style="font-size: 1rem;">Have feedback, questions, or suggestions?</p>
                 <p style="margin-top: 10px; font-size: 1rem;">
-                    📧 <a href="mailto:support@mgpc.app"
+                    📧 <a href="mailto:techstackapps@gmail.com"
                         style="color: #90CAF9; text-decoration: none;">techstackapps@gmail.com</a>
                 </p>
             </div>
@@ -464,6 +464,16 @@
     <!-- Footer at the bottom of the page -->
     <footer>
         <p>&copy; <span id="year"></span> Marriage Card Game Point Calculator. All rights reserved.</p>
+        <div style="
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+    font-size: 0.9rem;
+  ">
+            <a href="/mgpc-privacy-terms" style="color: #90CAF9; margin-right: 15px; text-decoration: none;">
+                App Privacy & Terms
+            </a>
+        </div>
     </footer>
 
 </body>
