chore: added mgpc privacy and terms

--- a/mgpc-privacy-terms.html
+++ b/mgpc-privacy-terms.html
@@ -47,7 +47,8 @@
         }
 
         h1,
-        h2 {
+        h2,
+        h3 {
             color: #AF1919;
         }
 
@@ -101,7 +102,31 @@
             <h3>4. Your Consent</h3>
             <p>By using the app, you consent to this privacy policy.</p>
 
-            <p>For any questions, contact us at <a href="mailto:techstackapps@gmail.com">techstackapps@gmail.com</a>.
+            <h3>5. Your Rights (GDPR & CCPA)</h3>
+            <p>If you are a resident of the European Economic Area (EEA), California, or a region with similar privacy
+                laws,
+                you have certain rights including the right to access, update, or delete your data. You may also request
+                a copy
+                of your stored data. To exercise your rights, contact us at
+                <a href="mailto:techstackapps@gmail.com">techstackapps@gmail.com</a>.
+            </p>
+            <h3>6. Third-Party Services</h3>
+            <p>We may use third-party services to help us improve our app, deliver advertisements, or track usage
+                patterns. These services may collect anonymized data such as device information, usage statistics, and
+                crash logs.</p>
+
+            <p>These third-party providers operate under their own privacy policies and are responsible for how they
+                process your data. We ensure that we only work with trusted partners who follow industry-standard
+                privacy and security practices.</p>
+
+            <h3>7. Changes to This Policy</h3>
+            <p>We may update this privacy policy periodically. Changes will be posted on this page with a new effective
+                date.
+                Continued use of the app implies acceptance of the new policy.</p>
+
+            <h3>8. Contact</h3>
+            <p>For questions about this privacy policy, please contact us at
+                <a href="mailto:techstackapps@gmail.com">techstackapps@gmail.com</a>.
             </p>
         </section>
 
@@ -123,7 +148,9 @@
             <p>We may update these terms periodically. Continued use of the app constitutes acceptance of any changes.
             </p>
 
-            <p>For any questions, contact us at <a href="mailto:techstackapps@gmail.com">techstackapps@gmail.com</a>.
+            <h3>5. Contact</h3>
+            <p>For any questions about these terms, contact us at
+                <a href="mailto:techstackapps@gmail.com">techstackapps@gmail.com</a>.
             </p>
         </section>
     </main>
