chore: updated mgpc-privacy-terms

--- a/mgpc-privacy-terms.html
+++ b/mgpc-privacy-terms.html
@@ -83,10 +83,10 @@
         <!-- Privacy Policy -->
         <section id="privacy">
             <h2>Privacy Policy</h2>
-            <p><strong>Last updated:</strong> June 2, 2025</p>
+            <p><strong>Last updated:</strong> June 11, 2025</p>
 
-            <p>This privacy policy explains how MGPC ("we", "our", or "us") collects, uses, and protects your data when
-                using our app.</p>
+            <p>This privacy policy explains how MGPC – Marriage Game Point Calculator ("we", "our", or "us") collects,
+                uses, and protects your data when using our app.</p>
 
             <h3>1. Information We Collect</h3>
             <p>We may collect basic usage analytics (e.g., screen views, app version, crash reports) to improve app
@@ -97,23 +97,24 @@
                 features.</p>
 
             <h3>3. Data Sharing</h3>
-            <p>We do not sell or share your data with third parties.</p>
+            <p>We do not sell your personal data. Some non-identifiable usage data may be processed by integrated
+                services as described below.</p>
 
             <h3>4. Your Consent</h3>
             <p>By using the app, you consent to this privacy policy.</p>
 
             <h3>5. Your Rights (GDPR & CCPA)</h3>
             <p>If you are a resident of the European Economic Area (EEA), California, or a region with similar privacy
-                laws,
-                you have certain rights including the right to access, update, or delete your data. You may also request
-                a copy
-                of your stored data. To exercise your rights, contact us at
+                laws, you have certain rights including the right to access, update, or delete your data. You may also
+                request a copy of your stored data. To exercise your rights, contact us at
                 <a href="mailto:techstackapps@gmail.com">techstackapps@gmail.com</a>.
             </p>
+
             <h3>6. Third-Party Services</h3>
             <p>We may use third-party services to help us improve our app, deliver advertisements, or track usage
                 patterns. These services may collect anonymized data such as device information, usage statistics, and
-                crash logs.</p>
+                crash logs. These services may include tools for analytics, advertising, or crash reporting and may
+                collect data such as device type, usage duration, or error logs to operate as intended.</p>
 
             <p>These third-party providers operate under their own privacy policies and are responsible for how they
                 process your data. We ensure that we only work with trusted partners who follow industry-standard
@@ -121,8 +122,7 @@
 
             <h3>7. Changes to This Policy</h3>
             <p>We may update this privacy policy periodically. Changes will be posted on this page with a new effective
-                date.
-                Continued use of the app implies acceptance of the new policy.</p>
+                date. Continued use of the app implies acceptance of the new policy.</p>
 
             <h3>8. Contact</h3>
             <p>For questions about this privacy policy, please contact us at
@@ -133,10 +133,11 @@
         <!-- Terms of Service -->
         <section id="terms">
             <h2>Terms of Service</h2>
-            <p><strong>Last updated:</strong> June 2, 2025</p>
+            <p><strong>Last updated:</strong> June 11, 2025</p>
 
             <h3>1. Acceptance of Terms</h3>
-            <p>By using the MGPC app, you agree to comply with and be bound by these terms.</p>
+            <p>By using the MGPC – Marriage Game Point Calculator app, you agree to comply with and be bound by these
+                terms.</p>
 
             <h3>2. Usage</h3>
             <p>The app is intended for personal use only. Misuse of the service is strictly prohibited.</p>
