--- a/mgpc/stream/index.html
+++ b/mgpc/stream/index.html
@@ -11,6 +11,18 @@
 </head>
 <body>
     <div id="root"></div>
-    
+    <script>
+      // GitHub Pages SPA redirect handler
+      (function(l) {
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) { 
+            return s.replace(/~and~/g, '&')
+          }).join('?');
+          window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      }(window.location))
+    </script>
 </body>
 </html>
